# s3g-dsp

./: .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_NOTICES.md
apps/multi_loop_processor_standalone/: CMakeLists.txt  s3g_multi_loop_processor_app.mm
apps/vox_builder/: CMakeLists.txt  s3g_vox_builder_app.mm
docs/: 3OAFX_insert_workflow.md  3oafx-displacement.html  3oafx-effects.html  3oafx-insert-workflow.html  3oafx-layout-panner.html  3oafx-point-encoder.html  3oafx-speaker-decoder.html  3oafx.html  ambi-cloud-encoder.html  ambi-environment-generator.html  ambi-grain-processor.html  ambi-imprint.html  ambi-insect-encoder.html  ambi-neural-ecology.html  ambi-path-encoder.html  ambi-pulsar-encoder.html  ambi-ray-bilocation-encoder.html  ambi-ray-encoder.html  ambi-stochastic-encoder.html  ambi-terrain-navigator.html  ambi-vot-encoder.html  ambi-vox-encoder.html  ambi-water-encoder.html  ambi-wave-terrain-encoder.html  ambi-wind-encoder.html  ambi-wrangler-encoder.html  ambisonic-bus-processors.html  ambisonic-decoders.html  ambisonic-effects.html  ambisonic-encoders.html  ambisonic-energy-visualizer.html  ambisonic-head-decoder.html  ambisonic-order-band-tool.html  ambisonic-rotate.html  ambisonic-stereo-decoder.html  ambisonic-utilities.html  building-from-source.html  bus-mixing-routing.html  delay-processor.html  direct-panning.html  (+35 more)
dsp/: s3g_24ch_layout.h  s3g_3oafx.h  s3g_3oafx_displacement.h  s3g_3oafx_rack.h  s3g_3oafx_single_effect.h  s3g_ambi_adaptive_decoder.h  s3g_ambi_cloud_encoder.h  s3g_ambi_encoder_depth.h  (+78 more)
plugins/clap_24ch_passthrough/: CMakeLists.txt  s3g_24ch_passthrough_clap.cpp
plugins/clap_3oafx_rack/: CMakeLists.txt  s3g_3oafx_rack_clap.cpp
plugins/clap_3oafx_single_effects/: CMakeLists.txt  s3g_3oafx_single_effect_clap.cpp
plugins/clap_3oafx_speaker_decoder/: CMakeLists.txt  s3g_3oafx_speaker_decoder_clap.cpp
plugins/clap_ambi_group_depth/: CMakeLists.txt  s3g_ambi_group_depth_clap.cpp
plugins/clap_ambi_imprint/: CMakeLists.txt  s3g_ambi_imprint_clap.cpp
plugins/clap_ambi_imprint/atlas/: README.md  abstract_folded_chamber.s3gimprint  abstract_impossible_network.s3gimprint  architecture_concrete_gallery.s3gimprint  architecture_wood_studio.s3gimprint  canyon_dry_slot.s3gimprint  canyon_porous_gorge.s3gimprint  cave_ice_grotto.s3gimprint  cave_limestone_pocket.s3gimprint  cavern_deep_stone_vault.s3gimprint  cavern_water_chamber.s3gimprint  clearing_forest_ring.s3gimprint  clearing_water_meadow.s3gimprint  echo_impossible_relay.s3gimprint  echo_metal_axial_tunnel.s3gimprint  echo_stone_flutter_gallery.s3gimprint  echo_stone_perimeter_circuit.s3gimprint  echo_twin_concrete_chambers.s3gimprint  manifest.json  tunnel_brick_bend.s3gimprint  tunnel_metal_conduit.s3gimprint
plugins/clap_ambi_imprint/atlas/projects/: abstract_folded_chamber.json  abstract_impossible_network.json  architecture_concrete_gallery.json  architecture_wood_studio.json  canyon_dry_slot.json  canyon_porous_gorge.json  cave_ice_grotto.json  cave_limestone_pocket.json  cavern_deep_stone_vault.json  cavern_water_chamber.json  clearing_forest_ring.json  clearing_water_meadow.json  echo_impossible_relay.json  echo_metal_axial_tunnel.json  echo_stone_flutter_gallery.json  echo_stone_perimeter_circuit.json  echo_twin_concrete_chambers.json  tunnel_brick_bend.json  tunnel_metal_conduit.json
plugins/clap_ambi_ray_encoder/: CMakeLists.txt  s3g_ambi_ray_encoder_clap.cpp
plugins/clap_ambi_ray_encoder/atlas/: README.md  abstract_folded_chamber.s3gray  abstract_impossible_network.s3gray  architecture_concrete_gallery.s3gray  architecture_wood_studio.s3gray  canyon_dry_slot.s3gray  canyon_porous_gorge.s3gray  cave_ice_grotto.s3gray  cave_limestone_pocket.s3gray  cavern_deep_stone_vault.s3gray  cavern_water_chamber.s3gray  clearing_forest_ring.s3gray  clearing_water_meadow.s3gray  echo_impossible_relay.s3gray  echo_metal_axial_tunnel.s3gray  echo_stone_flutter_gallery.s3gray  echo_stone_perimeter_circuit.s3gray  echo_twin_concrete_chambers.s3gray  manifest.json  tunnel_brick_bend.s3gray  tunnel_metal_conduit.s3gray
plugins/clap_ambi_ray_encoder/atlas/projects/: abstract_folded_chamber.json  abstract_impossible_network.json  architecture_concrete_gallery.json  architecture_wood_studio.json  canyon_dry_slot.json  canyon_porous_gorge.json  cave_ice_grotto.json  cave_limestone_pocket.json  cavern_deep_stone_vault.json  cavern_water_chamber.json  clearing_forest_ring.json  clearing_water_meadow.json  echo_impossible_relay.json  echo_metal_axial_tunnel.json  echo_stone_flutter_gallery.json  echo_stone_perimeter_circuit.json  echo_twin_concrete_chambers.json  tunnel_brick_bend.json  tunnel_metal_conduit.json
plugins/clap_ambi_terrain_navigator/: CMakeLists.txt  s3g_ambi_terrain_navigator_clap.cpp
plugins/clap_ambi_wrangler_encoder/: CMakeLists.txt  s3g_ambi_wrangler_encoder_clap.cpp
plugins/clap_ambisonic_energy_visualizer/: CMakeLists.txt  s3g_ambisonic_energy_visualizer_clap.cpp
plugins/clap_ambisonic_rotate/: CMakeLists.txt  s3g_ambisonic_rotate_clap.cpp
plugins/clap_array_delay/: CMakeLists.txt  s3g_array_delay_clap.cpp
plugins/clap_array_hpf/: CMakeLists.txt  s3g_array_hpf_clap.cpp
plugins/clap_diffusion_mesh/: CMakeLists.txt  s3g_diffusion_mesh_clap.cpp
plugins/clap_macro_pitch/: CMakeLists.txt  s3g_macro_pitch_clap.cpp
plugins/clap_macro_shred/: CMakeLists.txt  s3g_macro_shred_clap.cpp
plugins/clap_multi_loop_processor/: CMakeLists.txt  s3g_multi_loop_processor_clap.cpp
plugins/clap_node_track_mixer/: CMakeLists.txt  s3g_node_track_mixer_clap.cpp
plugins/clap_orbit_delay/: CMakeLists.txt  s3g_orbit_delay_clap.cpp
plugins/clap_psd_raw_field/: CMakeLists.txt  s3g_psd_raw_field_clap.cpp
plugins/clap_spectral_spray/: CMakeLists.txt  s3g_spectral_spray_clap.cpp
plugins/clap_spectral_topology_processor/: CMakeLists.txt  s3g_spectral_topology_processor_clap.cpp
plugins/clap_sub_crossover/: CMakeLists.txt  s3g_sub_crossover_clap.cpp
plugins/clap_tape_delay/: CMakeLists.txt  s3g_tape_delay_clap.cpp
(+142 files in other folders)
